<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_home_icon"
                android:layout_width="52dp"
                android:layout_height="22dp"
                android:scaleType="fitXY"
                android:layout_marginStart="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_symbol"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_home_app_title"
                style="@style/AppTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp"
                android:letterSpacing="-0.08"
                android:layout_marginStart="8dp"
                android:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_home_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="16dp"
                android:layout_height="15dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/description_search_image"
                android:focusable="true"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        style="@style/AppTabLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_main">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tab_question" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tab_answer" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dividerColor="#DBDBDB"
        app:dividerThickness="0.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/description_btn_post_add"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/black"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="36dp"
        app:pressedTranslationZ="12dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.FAB"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>